﻿i-MSCP ChangeLog

------------------------------------------------------------------------------------------------------------------------
Git 1.2.x
------------------------------------------------------------------------------------------------------------------------

INSTALLER
	Added: Conditional statement feature for install.xml files (copy_config items only)

FRONTEND
	Added: SPF DNS resource record type (validated as a TXT record)
	Changed: The type field cannot longer be changed when editing a DNS resource record
	Fixed: Cannot add DKIM/DMARC DNS resource record
	Fixed: Customer must be allowed to specify custom TTL value for any DNS resource record
	Fixed: Customer must be allowed to specify name field of any DNS resource record

PLUGINS
	Updated: API version to 1.0.4

SERVERS
	Added: Own i-MSCP logrorate configuration file for ProFTPD (xferlog file don't need to be rotated)
	Fixed: Bad regexp in getTraffic() method leading to unmatching of traffic data (VsFTPd)
	Fixed: Traffic accounting routines must not remove log files (ProFTPD/VsFTPd). Files are now truncated instead.
	Fixed: VsFTPd doesn't reopen xferlog file automatically when the file has been removed, leading to traffic data loss
	Removed: /var/log/proftpd/ftp_traff.log custom log. Traffic data are now pulled from /var/log/proftpd/xferlog

YOUTRACK
	IP-1231 Default SPF DNS resource records should be overrideable
	IP-1509 Could not generate SSL certificate through the frontEnd - Invalide SSL certificate
	IP-1510 VsFTPd - Use of uninitialized value $tmpFile
	IP-1511 Use of uninitialized value $imscpOldConfig{"BASE_SERVER_VHOST"} on fresh install
	IP-1513 Autoreply - Do not autoreply to messages marked as SPAM

------------------------------------------------------------------------------------------------------------------------
1.2.17
------------------------------------------------------------------------------------------------------------------------

2016-03-12: Laurent Declercq