@@ -46,7 +46,7 @@ class iMSCP_Update_Database extends iMSCP_Update
 	/**
 	 * @var int Last database update revision
 	 */
-	protected $lastUpdate = '219';
+	protected $lastUpdate = '221';
 
 	/**
 	 * Singleton - Make new unavailable
@@ -367,7 +367,7 @@ class iMSCP_Update_Database extends iMSCP_Update
 	 * - The IGNORE clause will be removed in MySQL 5.7
 	 *
 	 * @param string $table Database table name
-	 * @param array|string $columns Column name(s)
+	 * @param array|string $columns Column name(s) with OPTIONAL key length
 	 * @param string $indexType Index type (PRIMARY KEY (default), INDEX|KEY, UNIQUE)
 	 * @param string $indexName Index name (default is autogenerated)
 	 * @return null|string SQL statement to be executed
@@ -377,21 +377,31 @@ class iMSCP_Update_Database extends iMSCP_Update
 		$table = quoteIdentifier($table);
 		$indexType = strtoupper($indexType);
 
-		$indexName = ($indexType == 'PRIMARY KEY')
-			? 'PRIMARY' : (($indexName == '') ? ((is_array($columns)) ? $columns[0] : $columns) : $indexName);
+		$columnsTmp = (array)$columns;
+		$columns = array();
 
+		// Parse column definitions
+		foreach($columnsTmp as $columnsDef) {
+			if(preg_match('/^(?P<name>[^(]+)(?P<length>\(\d+\))$/', $columnsDef, $matches)) {
+				$columns[$matches['name']] = $matches['length'];
+			} else {
+				$columns[$columnsDef] = '';
+			}
+		}
+		unset($columnsTmp);
+
+		$indexName = $indexType == 'PRIMARY KEY' ? 'PRIMARY' : ($indexName == '' ? key($columns) : $indexName);
 		$stmt = exec_query("SHOW INDEX FROM $table WHERE KEY_NAME = ?", $indexName);
 
 		if (!$stmt->rowCount()) {
-			if (is_array($columns)) {
-				$columns = implode(',', array_map('quoteIdentifier', $columns));
-			} else {
-				$columns = quoteIdentifier($columns);
+			$columnsStr = '';
+			foreach($columns as $column => $length) {
+				$columnsStr .=  quoteIdentifier($column) . $length . ',';
 			}
+			unset($columns);
 
-			$indexName = ($indexName == 'PRIMARY') ? '' : quoteIdentifier($indexName);
-
-			return sprintf('ALTER TABLE %s ADD %s %s (%s)', $table,  $indexType, $indexName, $columns);
+			$indexName = $indexName == 'PRIMARY' ? '' : quoteIdentifier($indexName);
+			return sprintf('ALTER TABLE %s ADD %s %s (%s)', $table,  $indexType, $indexName, rtrim($columnsStr, ','));
 		}
 
 		return null;
@@ -3471,6 +3481,39 @@ class iMSCP_Update_Database extends iMSCP_Update
 			'domain_dns',
 			'domain_type',
 			"`domain_type` ENUM('A','AAAA','CERT','CNAME','DNAME','GPOS','KEY','KX','MX','NAPTR','NSAP','NS','NXT','PTR','PX','SIG','SRV','TXT','SPF') CHARACTER SET utf8 COLLATE utf8_unicode_ci NOT NULL DEFAULT 'A'"
+		);
+	}
+
+	/**
+	 * Drop domain_id index on domain_dns table (needed for update r221)
+	 *
+	 * @return string SQL statements to be executed
+	 */
+	protected function r220()
+	{
+		return $this->dropIndexByName('domain_dns', 'domain_id');
+	}
+
+	/**
+	 * Change domain_dns.domain_dns and domain_dns.domain_text column types from varchar to text
+	 * Created domain_id index on domain_dns table (with expected index length)
+	 *
+	 * @return array SQL statements to be executed
+	 */
+	protected function r221()
+	{
+		return array(
+			$this->changeColumn(
+				'domain_dns', 'domain_dns', "`domain_dns` TEXT CHARACTER SET utf8 COLLATE utf8_unicode_ci NOT NULL"
+			),
+			$this->changeColumn(
+				'domain_dns', 'domain_text', "`domain_text` TEXT CHARACTER SET utf8 COLLATE utf8_unicode_ci NOT NULL"
+			),
+			$this->addIndex(
+				'domain_dns',
+				array('domain_id', 'alias_id', 'domain_dns(255)', 'domain_class', 'domain_type', 'domain_text(255)'),
+				'UNIQUE'
+			)
 		);
 	}
 }
