@@ -4,6 +4,10 @@
 Git 1.2.x
 ------------------------------------------------------------------------------------------------------------------------
 
+DATABASE
+	Changed: domain_dns.domain_dns and domain_dns.domain_text column types from varchar to text
+	Updated: domain_id index on domain_dns table; added index length for domain_dns and domain_text columns
+
 INSTALLER
 	Added: Conditional statement feature for install.xml files (copy_config items only)
 
@@ -13,6 +17,9 @@ FRONTEND
 	Fixed: Cannot add DKIM/DMARC DNS resource record
 	Fixed: Customer must be allowed to specify custom TTL value for any DNS resource record
 	Fixed: Customer must be allowed to specify name field of any DNS resource record
+	Fixed: IDNs are shown in ASCII in SSL certificate management interface
+	Fixed: iMSCP_Update_Database::addIndex() doesn't allow to specify index length
+
 
 PLUGINS
 	Updated: API version to 1.0.4
